--- a/basislibrary/src/main/AndroidManifest.xml
+++ b/basislibrary/src/main/AndroidManifest.xml
@@ -1,12 +1,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 
           package="com.gingold.basislibrary"
->
-
-    <application android:allowBackup="true"
-                 android:label="@string/app_name"
-                 android:supportsRtl="true"
     >
+
+    <application
+        android:label="@string/app_name"
+        >
 
     </application>
 
