--- a/basislibrary/src/main/AndroidManifest.xml
+++ b/basislibrary/src/main/AndroidManifest.xml
@@ -1,12 +1,3 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-
-          package="com.gingold.basislibrary"
-    >
-
-    <application
-        android:label="@string/app_name"
-        >
-
-    </application>
+<manifest package="com.gingold.basislibrary">
 
 </manifest>
