--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
         </activity>
         <activity android:name=".activity.SPActivity"/>
         <activity android:name=".activity.MultiLvActivity"/>
+        <activity android:name=".activity.MultiRvActivity"/>
     </application>
 
 </manifest>
