--- a/basislibrary/src/main/AndroidManifest.xml
+++ b/basislibrary/src/main/AndroidManifest.xml
@@ -1,3 +1,4 @@
-<manifest package="com.gingold.basislibrary">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+          package="com.gingold.basislibrary">
 
 </manifest>
