--- a/basislibrary/build.gradle
+++ b/basislibrary/build.gradle
@@ -17,4 +17,5 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:26.+'
     compile 'com.squareup.okhttp3:okhttp:3.8.1'
     compile 'com.google.code.gson:gson:2.8.1'
+    compile 'com.jakewharton:butterknife:7.0.1'
 }
