OkHttp 网络请求,上传和下载文件 封装

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,8 @@
         <activity android:name=".activity.RvRefreshActivity"/>
         <activity android:name=".activity.LvRefreshActivity"/>
         <activity android:name=".activity.TestActivity"/>
+        <activity android:name=".activity.OkHttpActivity"/>
+        <activity android:name=".activity.OkHttpPicActivity"/>
     </application>
 
 </manifest>
