--- a/basislibrary/src/main/AndroidManifest.xml
+++ b/basislibrary/src/main/AndroidManifest.xml
@@ -1,4 +1,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.gingold.basislibrary">
 
+    <!--网络权限-->
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <!--读取储存-->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <!--写入储存-->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
 </manifest>
