--- a/basislibrary/build.gradle
+++ b/basislibrary/build.gradle
@@ -10,12 +10,24 @@ android {
         versionCode 1
         versionName "1.0"
     }
+
+    repositories {
+        mavenCentral() // jcenter() works as well because it pulls from Maven Central
+    }
 }
 
 dependencies {
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support:recyclerview-v7:26.+'
-    compile 'com.squareup.okhttp3:okhttp:3.8.1'
-    compile 'com.google.code.gson:gson:2.8.1'
-    compile 'com.jakewharton:butterknife:7.0.1'
+
+    compile 'com.squareup.okhttp3:okhttp:3.8.1'//Okhttp
+
+    compile 'com.google.code.gson:gson:2.8.1'//gson
+
+    compile 'com.jakewharton:butterknife:7.0.1'//butterknife
+
+    //Glide相关
+    compile 'com.github.bumptech.glide:glide:4.0.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0'
+    compile 'jp.wasabeef:glide-transformations:2.0.2'//Glide特殊效果
 }
