delete trial code

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,31 +10,31 @@ android {
         versionCode 1
         versionName "1.0"
     }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-    }
+//    buildTypes {
+//        release {
+//            minifyEnabled false
+//            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+//        }
+//    }
+//
+//    signingConfigs {
+//        release {
+//            storeFile file("D:/workspace/keystore/NeZaApp/nezepublish.keystore")
+//            storePassword "fhlwlsys"
+//            keyAlias "fhlwlsys.neza"
+//            keyPassword "fhlwlsys"
+//        }
+//    }
 
-    signingConfigs {
-        release {
-            storeFile file("D:/workspace/keystore/NeZaApp/nezepublish.keystore")
-            storePassword "fhlwlsys"
-            keyAlias "fhlwlsys.neza"
-            keyPassword "fhlwlsys"
-        }
-    }
 
-
-    buildTypes {
-        debug {
-            signingConfig signingConfigs.release
-        }
-        release {
-            signingConfig signingConfigs.release
-        }
-    }
+//    buildTypes {
+//        debug {
+//            signingConfig signingConfigs.release
+//        }
+//        release {
+//            signingConfig signingConfigs.release
+//        }
+//    }
 }
 
 dependencies {
