基础类修改, 添加数据库工具类

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         <activity android:name=".activity.OkHttpPicActivity"/>
         <activity android:name=".activity.GlideActivity"/>
         <activity android:name=".activity.PhotoActivity"/>
+        <activity android:name=".activity.DBActivity"/>
     </application>
 
 </manifest>
