--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile project(':basislibrary')
 //    compile 'com.github.GinGod:BasisDependency:v1.0.3'
+//    compile 'com.gingod:BasisDependency:1.0.0'
 }
