--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,9 +42,8 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:26.+'
-    compile 'com.android.support:recyclerview-v7:26.+'
     testCompile 'junit:junit:4.12'
+    compile 'com.jakewharton:butterknife:7.0.1'//butterknife
     compile project(':basislibrary')
 //    compile 'com.github.GinGod:BasisDependency:v1.0.3'
 //    compile 'com.gingod:BasisDependency:1.0.0'
