--- a/basislibrary/src/main/AndroidManifest.xml
+++ b/basislibrary/src/main/AndroidManifest.xml
@@ -4,8 +4,10 @@
     <!--网络权限-->
     <uses-permission android:name="android.permission.INTERNET"/>
     <!--读取储存-->
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <!--写入储存-->
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <!--打电话-->
+    <uses-permission android:name="android.permission.CALL_PHONE"/>
 
 </manifest>
