1.okhttp 添加get请求; 2.手机设备信息获取工具类; 3.getTvText等方法去掉点击事件; 4.网络请求添加显示dialog方法;

--- a/basislibrary/src/main/AndroidManifest.xml
+++ b/basislibrary/src/main/AndroidManifest.xml
@@ -9,5 +9,8 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <!--打电话-->
     <uses-permission android:name="android.permission.CALL_PHONE"/>
+    <!--IP地址获取-->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
 
 </manifest>
