dialog 工具类优化, 添加可自定义布局工具类 BasisSelfDialogUtils 和 BasisSelfPopWinUtils

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
         <activity android:name=".activity.GlideActivity"/>
         <activity android:name=".activity.PhotoActivity"/>
         <activity android:name=".activity.DBActivity"/>
+        <activity android:name=".activity.DialogActivity"/>
     </application>
 
 </manifest>
