1.服务中可以打印Toast;2.当BasisRecyclerView展示的item没有完全填满屏幕时, 删减一条数据后刷新报异常解决;3.时间工具类添加获取某月最后一天;4.BasisRecyclerView没有更多数据脚布局点击加载更多监听

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,9 @@
         <activity android:name=".activity.PhotoActivity"/>
         <activity android:name=".activity.DBActivity"/>
         <activity android:name=".activity.DialogActivity"/>
+        <activity android:name=".activity.BugRecycler2To1Activity"/>
+
+        <service android:name=".TestService"/>
     </application>
 
 </manifest>
