1.沉浸式状态栏工具类(BasisImmerseUtils), 包含设置状态栏隐藏方法, 2.获取手机ip地址, 3.html5简单测试, 4.异常完整信息获取(BasisCommonUtils), 5.okhttp工具类异常信息获取优化

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,29 +12,28 @@ android {
     }
 //    buildTypes {
 //        release {
-//            minifyEnabled false
+//            minifyEnabled false  //true 是运行混淆文件 ，false 是不运行混淆文件
 //            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
 //        }
 //    }
 //
-//    signingConfigs {
-//        release {
-//            storeFile file("D:/workspace/keystore/NeZaApp/nezepublish.keystore")
-//            storePassword "fhlwlsys"
-//            keyAlias "fhlwlsys.neza"
-//            keyPassword "fhlwlsys"
-//        }
-//    }
+    signingConfigs {
+        release {
+            storeFile file('defaultkey.keystore')
+            storePassword 'defaultkey'
+            keyAlias 'defaultkey'
+            keyPassword 'defaultkey'
+        }
+    }
 
-
-//    buildTypes {
-//        debug {
-//            signingConfig signingConfigs.release
-//        }
-//        release {
-//            signingConfig signingConfigs.release
-//        }
-//    }
+    buildTypes {
+        debug {
+            signingConfig signingConfigs.release
+        }
+        release {
+            signingConfig signingConfigs.release
+        }
+    }
 }
 
 dependencies {
