--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,13 +11,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
-        </activity>
+        <activity android:name=".MainActivity"/>
         <activity android:name=".activity.SPActivity"/>
         <activity android:name=".activity.MultiLvActivity"/>
         <activity android:name=".activity.MultiRvActivity"/>
@@ -35,6 +29,14 @@
         <activity android:name=".activity.Html5Activity"/>
         <activity android:name=".activity.ImmerseActivity"/>
         <activity android:name=".activity.ImmerseFragmentActivity"/>
+        <activity
+            android:name=".activity.SplashActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
 
         <service android:name=".TestService"/>
     </application>
