1.BasisTimesUtils 工具类添加 DatePickerDialog 和 TimePickerDialog 的使用; 2.常规动画测试

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.AnimationActivity"/>
+        <activity android:name=".activity.DateTimePickerActivity"/>
 
         <service android:name=".TestService"/>
     </application>
