1.动画实现工具类 BasisAnimUtils; 2.BasisFileUtils 添加关闭流通用方法close

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,7 @@
         </activity>
         <activity android:name=".activity.AnimationActivity"/>
         <activity android:name=".activity.DateTimePickerActivity"/>
+        <activity android:name=".activity.Glide2Activity"/>
 
         <service android:name=".TestService"/>
     </application>
