--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.jakewharton:butterknife:7.0.1'//butterknife
     compile project(':basislibrary')
-//    compile 'com.github.GinGod:BasisDependency:v1.0.3'
-//    compile 'com.gingod:BasisDependency:1.0.0'
+    //    compile 'com.github.GinGod:BasisDependency:v1.0.3'
+    //    compile 'com.gingod:BasisDependency:1.0.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
