1.Okhttp 使用太过繁琐, 已封装简便方法, 原使用逻辑仍可使用; 2.BasisSelfDialogUtils 解决布局中含有EditText, 但无法弹出软键盘问题; 3.jp.co.cyberagent.android.gpuimage:gpuimage-library 依赖屏蔽; 4.自定义标题initTitle()方法的左返回允许任意布局, 以前强转为ImageView, 当前为View

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,5 @@ dependencies {
     //    compile 'com.github.GinGod:BasisDependency:v1.0.3'
     //    compile 'com.gingod:BasisDependency:1.0.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile "me.leolin:ShortcutBadger:1.1.21@aar"//测试应用图标右上角消息个数, 测试效果不理想
 }
