--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.gingold.basisdependency">
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -27,6 +28,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
+        android:requestLegacyExternalStorage="true"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
@@ -47,8 +49,6 @@
         <activity android:name=".activity.DialogActivity" />
         <activity android:name=".activity.ExceptionInfoActivity" />
         <activity android:name=".activity.Html5Activity" />
-        <activity android:name=".activity.ImmerseActivity" />
-        <activity android:name=".activity.ImmerseFragmentActivity" />
         <activity android:name=".activity.AnimationActivity" />
         <activity android:name=".activity.DateTimePickerActivity" />
 
